--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -164,7 +164,7 @@
             "problemMatcher": [],
             "dependsOrder": "sequence",
             "dependsOn": [
-                "Create Venv",
+                //"Create Venv",
                 "Install Deploy Dependencies",
                 "Install Optional Dependencies",
                 "Clean",
