--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,8 @@ disable = """
     too-many-public-methods,
     too-many-locals,
     invalid-name,
-    logging-fstring-interpolation
+    logging-fstring-interpolation,
+    fixme,
 """
 
 [tool.pytest.ini_options]
